<resources>
    <string name="app_name">曾益2022110658</string>
    <string name="name">姓名：</string>
    <string name="gender">性别：</string>
    <string name="studentId">学号：</string>
    <string name="phone">电话：</string>
    <string name="eamil">邮箱：</string>
    <string name="hobbies">爱好：</string>
    <string name="score">最高分：</string>
    <string name="editButton">编辑信息</string>
    <string name="startGameButton">开始游戏</string>
    <string name="avatar">avatorImageView</string>
    <string name="saveButton">保存</string>
    <string name="music">音乐</string>
    <string name="sport">运动</string>
    <string name="read">阅读</string>
    <string name="hobby">爱好：</string>
    <string name="email">邮箱</string>
    <string name="phoneedit">电话</string>
    <string name="studentidedit">学号</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="nameedit">姓名</string>
    <string name="upphone">上传照片</string>
    <string name="resetButton">重置游戏</string>
    <string name="title_activity_edit_info_activity.kt">EditInfoActivity.kt</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="h">爱好：</string>
    <string name="p">上传照片</string>
    <string name="n">姓名</string>
    <string name="m">男</string>
    <string name="f">女</string>
    <string name="ph">电话</string>
    <string name="r">阅读</string>
    <string name="s">运动</string>
    <string name="mu">音乐</string>
    <string name="save">保存</string>
    <string name="na">姓名：</string>
    <string name="gen">性别：</string>
    <string name="phone1">电话：</string>
    <string name="bestscore">最高分：</string>
    <string name="edit">编辑信息</string>
    <string name="start">开始游戏</string>
    <string name="restart">重置游戏</string>
    <string name="score_0">Score: 0</string>
    <string name="sco">Score: 0</string>
    <string name="exit">退出</string>
    <string name="restart1">重置游戏</string>
    <string name="_0">得分: 0</string>
    <string name="title_activity_card_game">CardGameActivity</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">9</string>
    <string name="_16">9</string>
    <string name="_15">9</string>
    <string name="_14">9</string>
    <string name="_13">9</string>
    <string name="_12">9</string>
    <string name="_11">9</string>
    <string name="Score">Score</string>
</resources>